Fix spacing again

--- a/static/styles/mainpage.css
+++ b/static/styles/mainpage.css
@@ -2,12 +2,12 @@ body {
   background-color: #FFB6C1;
 }
 
+div {
+  margin: auto auto;
+}
+
 h1, p {
   color: white;
   text-align: center;
   font-family: monospace;
-}
-
-h1 {
-  padding-top: 10px;
 }
